# auto-quran

./: .gitignore  LLM_ONBOARDING.md  README.md  UI_GUIDE.md  alignment_utils.py  app.py  install.sh  launch_ui.sh  pyproject.toml  quran_transcription_api.py  regression_tests.py  requirements.txt  setup_macos.sh  video_gen.ipynb
config/whisper_remote/: docker-compose.cloudflare.yml
data/fixtures/56_1-40_ali_salah_omar/: expected.json  metadata.json
data/transcriptions/: 7c82281ffe342bba_Sheikh Musa Anfal_processed.wav.json  95ce00c87a6e56f5_Surah Al-Waqi_ah Verses 1 - 40  Shaykh Ali Salah O.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LLM_HANDOVER.md  LLM_ONBOARDING.md  REGRESSION_TESTS.md  REMOTE_WHISPER_CLOUDFLARE.md  TRANSCRIPTION_API.md
docs/superpowers/plans/: 2026-03-27-dtw-alignment-redesign.md  2026-03-29-dtw-repetition-handling.md  2026-04-01-whisperx-engine.md
notebooks/: audio_processing.ipynb  data_processing.ipynb
scripts/: setup_windows.ps1
src/: LLM_utils.py  __init__.py  alignment_utils.py  audio_processing_utils.py  data_processing_utils.py  dtw_alignment.py  pexel_utils.py  prompts.py  quran_utils.py  utils.py  whisper_remote_client.py
src/whisper_service/: Dockerfile  __init__.py  requirements.txt  server.py
tests/: debug_anfal_segments.py  debug_ayah9_boundary.py  test_dtw_alignment.py  test_repetition.py  test_whisper_remote_client.py  test_whisper_service_server.py  test_whisper_transcriber_engine.py  test_word_classification.py
tests/debug/: debug_anfal_segments.py  debug_ayah9_boundary.py
(+5 files in other folders)
