[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "ai-quran-video-composer"
version = "0.1.0"
description = "Quran recitation video generator with transcription and ayah alignment tooling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "arabic-reshaper>=3.0.0",
  "flask>=3.0.0,<4.0.0",
  "html2image==2.0.7",
  "ipython==8.27.0",
  "jupyter==1.1.1",
  "moviepy==2.1.2",
  "mutagen==1.47.0",
  "openai==1.82.0",
  "openai-whisper>=20231117",
  "pandas==2.2.3",
  "pydub==0.25.1",
  "python-dotenv>=1.0.1",
  "python-bidi>=0.4.2",
  "rapidfuzz>=3.0.0",
  "requests==2.32.3",
  "streamlit>=1.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
